2nd update direct from github code index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ style="width:100%;max-width:960px"></div>
 <p>Add A new line in our file!</p>
 <p>Insert a new line in index.html</p>
   <p> Edit code direct from Github code </p>
-  
+    <p> Edit code direct from Github code 2nd </p>
 </body>
 </html>
