update index.html 3rd

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@ style="width:100%;max-width:960px"></div>
 <p>Insert a new line in index.html</p>
   <p> Edit code direct from Github code </p>
     <p> Edit code direct from Github code 2nd </p>
+      <p> Edit code direct from Github code 3nd </p>
 </body>
 </html>
