--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@ style="width:100%;max-width:960px"></div>
   <p> Edit code direct from Github code </p>
     <p> Edit code direct from Github code 2nd </p>
       <p> Edit code direct from Github code 3nd </p>
+      <p> start edit index.html  in dev branch</p>
+  
 </body>
 </html>
